Update Java client examples
The Java client examples have been moved into
com.example.pki.client package.

A new test has been added to build and run the examples.